--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+// $color: #E4F9F5;
+// $color: #30E3CA;
+// $color: #11999E;
+// $color: #40514E;
+
+body {
+    box-sizing: border-box;
+    margin: 0;
+    color: #E4F9F5;
+    background-color: #40514E;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
